examples/tests/invalid/subdir2/file.w
class MyPrivateClass {}

struct MyPrivateStruct {}

enum MyPrivateEnum { A, B }

interface MyPrivateInterface {}
